2004-05-14  Lassi A. Tuura  <lat@iki.fi>

	* IgProfFileDesc.cc: Implement.

2004-05-13  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Normalise counters early.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc: Fix option
	parsing.

	* IgProf.cc (igkill): Lock only once we know we will handle this
	signal to avoid dead-locking problems (e.g. with SIGPROF).

2004-05-13  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.h: Turn off verbosity for proper usage.

	* IgProf.h, IgProf.cc (IGPROF_ASSERT, IGPROF_TRACE, panic): New
	profiler tool debugging utilities.

	* IgProfFileDesc.cc, IgProfPerf.cc: Use them.

	* IgProfMem.cc: Use them.  Allow remove() to be called on
	objects whose creation we didn't track.

2004-05-12  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Fix dump reading bugs.  Take into account key
	ordering options for output.

	* igprof-analyse: First complete version (except recursion).

	* IgProf.cc: Output counter counts.  Clean up output layout.

	* igprof, IgProfMem.cc: Counters now have counts as well as
	totals, no need for allocations counter any more.

	* igprof-analyse: First semi-functional version.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc: Remove
	cumulative counters, they are handled in the analyser.

2004-05-11  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof, IgProf.cc, IgProfPerf.cc: Fixes for OS X.

2004-05-10  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof-analyse: Preliminary analysis.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc (initialize):
	Make progress in the option string when unrecognised input is found.

	* scripts/igprof: Adapt to new profiler core.
	* scripts/igprof-analyse: New, analyse output files.

	* IgProf.h (IGPROF_LIBHOOK): New, for library-targeted hooks.
	* IgProf.cc: Use it to capture exit() from libc directly in
	non-dynamic programs such as "ls".
	* IgProfPerf.cc: Implement.
	* IgProfMem.cc: Remove unnecessary crud.

	* IgProf.h, IgProf.cc: Clean up internal static variable usage.