@@ -1,5 +1,7 @@
 2004-05-14  Lassi A. Tuura  <lat@iki.fi>
 
+	* IgProfFileDesc.cc (initialize): Fix option handling.
+
 	* IgProfFileDesc.cc: Implement.
 
 2004-05-13  Lassi A. Tuura  <lat@iki.fi>
